<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heroInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_hero_input" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/clear_btn" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/herosTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/allTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_all" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/swTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_sw" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/marvelTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_marvel" />
        </com.google.android.material.tabs.TabLayout>

        <ListView
            android:id="@+id/herosListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

        <TextView
            android:id="@+id/resultTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>